Security config is fixed.